Navigate previous / next race. Print status of result